Fix(Docs): Version select not legible until hovered in Firefox
Issue is due to Firefox using OS implementation for select dropdowns.
Chrome and Safari use web rendering, so they don't have this issue.

--- a/autogen/docs/styles/nav.css
+++ b/autogen/docs/styles/nav.css
@@ -147,6 +147,16 @@
 	background: var(--color-background);
 }
 
+@-moz-document, @supports (-moz-appearance: none) {
+  .version-select:hover {
+    background: var(--color-nav-text);
+    color: var(--color-text-on-primary);
+  }
+  .version-select option {
+    color: var(--color-text-on-primary);
+  }
+}
+
 /* Utility buttons */
 .navbar__actions {
 	display: flex;
